# Fire-Extinguisher-Bot

./: README.md
Images and Videos/Videos/: PID control.md
Images_videos/Videos/: Presentation.md
Mechanical Design/Bot Base/: CMakeLists.txt
Mechanical Design/Bot SolidWorks files/: 026_Motor DC (1).SLDPRT  1111.SLDASM  1111.SLDPRT  12v_DC_Gearmotor_5-60rpm.SLDPRT  Assem1.SLDPRT  Assem121.SLDASM  Assem13.SLDASM  Copy of Part31^Assem12.sldprt  DC Motor PZ22GR9120R-084BBH - V31111.SLDPRT  Eje.SLDPRT  Kormas DC-190w.SLDPRT  M3 x 0.5mm Thread 20mm LONG SOCKET HEAD CAP SCREW.STEP  MBL3806 (1).step  MirrorPart20.sldprt  Motor sin eje.SLDPRT  Part1 (2).SLDPRT  Part1.SLDPRT  Part10.SLDPRT  Part11.SLDPRT  Part2 (2).SLDPRT  Part2.SLDPRT  Part3 (2).SLDPRT  Part3 (3).SLDPRT  Part3 Copy.SLDPRT  Part4.SLDPRT  Part5.SLDPRT  Part6.SLDPRT  Part7.SLDPRT  Part8.SLDPRT  Partattach.SLDPRT  Partrod.SLDPRT  Partrod33.SLDPRT  Partrollers.SLDPRT  Partscrew.SLDPRT  Partwheel rod.SLDPRT  Rotomag motors.SLDPRT  ball_bearing_lm5uu.SLDPRT  shaft.SLDPRT
Mechanical Design/Bot_Base/: package.xml
Mechanical Design/Upper nozzle revised/: CMakeLists.txt  package.xml
Mechanical Design/Upper nozzle revised/launch/: display.launch  gazebo.launch
Mechanical Design/Upper nozzle revised/urdf/: Upper nozzle revised.csv  Upper nozzle revised.urdf
Simulation/: Bot part_coppeliasim.ttt  Runnig the simulation.md  STAIR CLIMBING.ttt  Wheel PID and Fire detection.ttt
src/: Image processing.py  Image_Processing.py  PID controller.txt  flame detection and nozzle motion openCV.py  nozzle motor arduino.ino
(+35 files in other folders)
